--- a/html/Settings.html
+++ b/html/Settings.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="resources/default/styles.css" id="defaultStyle">
   <link rel="stylesheet" href="resources/jess/jessStyles.css" id="jessStyle">
   <link rel="stylesheet" href="resources/jess/darkStyles.css" id="darkStyle" disabled>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      // Check if user data does not exist in local storage
+      if (!localStorage.getItem('first_name') || !localStorage.getItem('email') || !localStorage.getItem('password')) {
+        // Redirect to login.html if user data is not found
+        window.location.href = 'login.html';
+      }
+    });
+  </script>
 </head>
 
 <body>
