--- a/html/SignUp.html
+++ b/html/SignUp.html
@@ -6,7 +6,13 @@
   <title>Sign Up - RentMyCaravan</title>
   <link rel="stylesheet" href="resources/caitlin/caitlinStyles.css" id="caitlinStyle">
   <link rel="stylesheet" href="resources/caitlin/darkStyles.css" id="darkStyle" disabled>
-
+  <script>
+    // Check if user data exists in local storage
+    if (localStorage.getItem('first_name') && localStorage.getItem('email') && localStorage.getItem('password')) {
+      // Redirect to profile.html if user data is found
+      window.location.href = 'profile.html';
+    }
+  </script>
 
   <style>
     .container-login {
