--- a/html/AddCaravan.html
+++ b/html/AddCaravan.html
@@ -61,6 +61,26 @@
   </header>
 
   <main>
+    <div class="button-container">
+      <button class="btn center">Number Plate</button>
+      <div class="button-row">
+        <button class="btn">Make</button>
+        <button class="btn">Model</button>
+      </div>
+      <div class="button-row">
+        <button class="btn">Body Type</button>
+        <button class="btn">Fuel Type</button>
+      </div>
+      <div class="button-row">
+        <button class="btn">Mileage</button>
+        <button class="btn">Location</button>
+      </div>
+      <div class="button-row">
+        <button class="btn">Production Year</button>
+        <button class="btn">Door Num</button>
+      </div>
+      <button class="btn center">Media</button>
+    </div>
   </main>
 
   <footer class="website-text">
