--- a/html/Settings.html
+++ b/html/Settings.html
@@ -93,11 +93,12 @@
           <label for="password">Password:</label>
           <input type="password" id="password" name="password" placeholder="Password" required>
         </div>
-        <button class="save-button">Save</button>
+        <div class="button-container">
+          <button class="save-button">Save</button>
+          <button class="delete-account-button">Delete Account</button>
+          <button class="log-out-button">Log out</button>
         <div>
-        <button class="delete-account-button">Delete Account</button>
         <div>
-        <button class="log-out-button">Log out</button>
         </div>
       </form>
     </div>
