--- a/html/CaravanList.html
+++ b/html/CaravanList.html
@@ -53,7 +53,15 @@
 
   <main>
     <div class="items-container">
-      <!-- Caravan items w ill be added here -->
+      <div class="box">
+        <img src="resources/jess/caravan1.jpeg" alt="Caravan Image" class="box-image">
+        <div class="box-content">
+          <h2 class="price">£32,995</h2>
+          <p class="make-model">2021 Buccaneer Bermuda</p>
+          <p class="additional-details">Year | Body Type | Fuel Type | Mileage | Door Num</p>
+        </div>
+        <img src="resources/tim/defaultProfile.png" alt="Profile Picture" class="profile-picture2">
+      </div>
     </div>
   </main>
 
@@ -64,35 +72,6 @@
   <script src="resources/default/script.js">
   </script>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      // Function to create a new caravan item
-      function createCaravanItem() {
-        const box = document.createElement('div');
-        box.className = 'box';
-        box.innerHTML = `
-      <img src="resources/jess/caravan1.jpeg" alt="Caravan Image" class="box-image">
-      <div class="box-content">
-        <h2 class="price">£32,995</h2>
-        <p class="make-model">2021 Buccaneer Bermuda</p>
-        <p class="additional-details">Year | Body Type | Fuel Type | Mileage | Door Num</p>
-      </div>
-      <img src="resources/tim/defaultProfile.png" alt="Profile Picture" class="profile-picture2">
-    `;
-        return box;
-      }
-
-      // Select the main tag and items-container
-      const mainTag = document.querySelector('main');
-      const itemsContainer = mainTag.querySelector('.items-container');
-
-      // Add 5 caravan items
-      for (let i = 0; i < 100; i++) {
-        itemsContainer.appendChild(createCaravanItem());
-      }
-    });
-
-  </script>
 </body>
 
 </html>
