--- a/html/AddCaravan.html
+++ b/html/AddCaravan.html
@@ -61,7 +61,7 @@
   </header>
 
   <main>
-    <form action="manage-caravan.php" method="post" id="caravanForm">
+    <form action="create-caravan.php" method="post" id="caravanForm">
       <div class="input-container">
         <input type="text" id="number-plate" name="numberPlate" class="input center" placeholder="Number Plate" required>
         <div class="input-row">
@@ -81,7 +81,6 @@
             <input type="text" id="door-num" name="doorNum" class="input" placeholder="Door Num" required>
         </div>
         <input type="text" id="media" name="media" class="input center" placeholder="Media" required>
-        <input type="hidden" name="action" value="create">
         <button type="submit" class="save-button">Add Caravan</button>
       </div>
     </form>
