--- a/html/AddCaravan.html
+++ b/html/AddCaravan.html
@@ -61,29 +61,101 @@
   </header>
 
   <main>
-    <form action="create-caravan.php" method="post" id="caravanForm">
+    <!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <title>Add Caravan - ListMyCaravan</title>
+  <link rel="stylesheet" href="resources/styles.css">
+  <link rel="stylesheet" href="resources/darkStyles.css" id="darkStyle" disabled>
+  <link rel="stylesheet" href="resources/craigStyles.css">  <!-- External CSS file for form styling -->
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <div class="navigation-bar">
+        <div><a href="index.html" class="website-name">ListMyCaravan</a></div>
+        <div class="nav-background"></div>
+        <div class="nav-buttons">
+          <div class="nav-button">
+            <a href="CaravanList.html" class="link-button">
+              <div class="button-back"></div>
+              <div class="button-label">List</div>
+            </a>
+          </div>
+          <div class="nav-button">
+            <a href="AddCaravan.html" class="link-button">
+              <div class="button-back"></div>
+              <div class="button-label">Add</div>
+            </a>
+          </div>
+          <div class="nav-button">
+            <a href="AboutUs.html" class="link-button">
+              <div class="button-back"></div>
+              <div class="button-label">About Us</div>
+            </a>
+          </div>
+          <div class="nav-button">
+            <a href="Settings.html" class="link-button">
+              <div class="button-back"></div>
+              <div class="button-label">Settings</div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="user-login-button">
+      <a href="Login.html">
+        <img src="resources/circle-user-round.svg" alt="User Login">
+      </a>
+    </div>
+  </header>
+
+  <main>
+    <!-- Form to add a new caravan. Data will be sent to manage-caravan.php for insertion into the database -->
+    <form action="manage-caravan.php" method="post" id="caravanForm">
       <div class="input-container">
+        <!-- Each input field collects specific data about the caravan -->
         <input type="text" id="number-plate" name="numberPlate" class="input center" placeholder="Number Plate" required>
+        <!-- Additional details for the caravan -->
         <div class="input-row">
             <input type="text" id="make" name="make" class="input" placeholder="Make" required>
             <input type="text" id="model" name="model" class="input" placeholder="Model" required>
         </div>
+        <!-- Fuel and body type information -->
         <div class="input-row">
             <input type="text" id="body-type" name="bodyType" class="input" placeholder="Body Type" required>
             <input type="text" id="fuel-type" name="fuelType" class="input" placeholder="Fuel Type" required>
         </div>
+        <!-- Mileage and location inputs -->
         <div class="input-row">
             <input type="text" id="mileage" name="mileage" class="input" placeholder="Mileage" required>
             <input type="text" id="location" name="location" class="input" placeholder="Location" required>
         </div>
+        <!-- Production year and door number inputs -->
         <div class="input-row">
             <input type="text" id="production-year" name="productionYear" class="input" placeholder="Production Year" required>
             <input type="text" id="door-num" name="doorNum" class="input" placeholder="Door Num" required>
         </div>
         <input type="text" id="media" name="media" class="input center" placeholder="Media" required>
+        <input type="hidden" name="action" value="create">
         <button type="submit" class="save-button">Add Caravan</button>
       </div>
     </form>
+  </main>
+
+  <footer>
+    <p>&copy; ListMyCaravan 2024 - All rights reserved</p>
+  </footer>
+
+  <script src="resources/script.js"></script>
+</body>
+
+</html>
+
+
   </main>
 
   <footer class="website-text">
