--- a/html/EditCaravan.html
+++ b/html/EditCaravan.html
@@ -52,21 +52,27 @@
   </header>
 
   <main>
+    <!-- Form to edit an existing caravan. Data will be sent to update-caravan.php to update the database -->
     <form action="update-caravan.php" method="post" id="caravanForm">
       <div class="input-container">
+        <!-- Each input field allows editing specific data about the caravan -->
         <input type="text" id="number-plate" name="numberPlate" class="input center" placeholder="Number Plate" required>
+        <!-- Inputs for make and model which can be edited -->
         <div class="input-row">
             <input type="text" id="make" name="make" class="input" placeholder="Make" required>
             <input type="text" id="model" name="model" class="input" placeholder="Model" required>
         </div>
+        <!-- Inputs for body and fuel type which can be edited -->
         <div class="input-row">
             <input type="text" id="body-type" name="bodyType" class="input" placeholder="Body Type" required>
             <input type="text" id="fuel-type" name="fuelType" class="input" placeholder="Fuel Type" required>
         </div>
+        <!-- Inputs for mileage and location which can be edited -->
         <div class="input-row">
             <input type="text" id="mileage" name="mileage" class="input" placeholder="Mileage" required>
             <input type="text" id="location" name="location" class="input" placeholder="Location" required>
         </div>
+        <!-- Inputs for production year and door number which can be edited -->
         <div class="input-row">
             <input type="text" id="production-year" name="productionYear" class="input" placeholder="Production Year" required>
             <input type="text" id="door-num" name="doorNum" class="input" placeholder="Door Num" required>
