--- a/html/AddCaravan.html
+++ b/html/AddCaravan.html
@@ -5,17 +5,8 @@
   <meta charset="UTF-8">
   <title>Add Caravan - RentMyCaravan</title>
   <link rel="stylesheet" href="resources/default/styles.css" id="defaultStyle">
-  <link rel="stylesheet" href="resources/craig/craigStyles.css" id=craigStyle">
-  <link rel="stylesheet" href="resources/craig/darkStyles.css" id="darkStyle" disabled>
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      // Check if user data does not exist in local storage
-      if (!localStorage.getItem('first_name') || !localStorage.getItem('email') || !localStorage.getItem('password')) {
-        // Redirect to login.html if user data is not found
-        window.location.href = 'login.html';
-      }
-    });
-  </script>
+  <link rel="stylesheet" href="resources/darkStyles.css" id="darkStyle" disabled>
+  <link rel="stylesheet" href="resources/craig/craigStyles.css" id="craigStyle"> <!-- External CSS file for form styling -->
 </head>
 
 <body>
@@ -23,60 +14,6 @@
     <div class="container">
       <div class="navigation-bar">
         <div><a href="index.html" class="website-name">RentMyCaravan</a></div>
-        <div class="nav-background"></div>
-        <div class="nav-buttons">
-          <div class="nav-button">
-            <a href="CaravanList.html" class="link-button">
-              <div class="button-back"></div>
-              <div class="button-label">List</div>
-            </a>
-          </div>
-          <div class="nav-button">
-            <a href="AddCaravan.html" class="link-button">
-              <div class="button-back"></div>
-              <div class="button-label">Add</div>
-            </a>
-          </div>
-          <div class="nav-button">
-            <a href="AboutUs.html" class="link-button">
-              <div class="button-back"></div>
-              <div class="button-label">About Us</div>
-            </a>
-          </div>
-          <div class="nav-button">
-            <a href="Settings.html" class="link-button">
-              <div class="button-back"></div>
-              <div class="button-label">Settings</div>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="user-login-button">
-      <a href="Login.html">
-        <img src="resources/default/circle-user-round.svg" alt="User Login">
-      </a>
-    </div>
-
-  </header>
-
-  <main>
-    <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <title>Add Caravan - ListMyCaravan</title>
-  <link rel="stylesheet" href="resources/styles.css">
-  <link rel="stylesheet" href="resources/darkStyles.css" id="darkStyle" disabled>
-  <link rel="stylesheet" href="resources/craigStyles.css">  <!-- External CSS file for form styling -->
-</head>
-
-<body>
-  <header>
-    <div class="container">
-      <div class="navigation-bar">
-        <div><a href="index.html" class="website-name">ListMyCaravan</a></div>
         <div class="nav-background"></div>
         <div class="nav-buttons">
           <div class="nav-button">
@@ -147,23 +84,10 @@
   </main>
 
   <footer>
-    <p>&copy; ListMyCaravan 2024 - All rights reserved</p>
-  </footer>
-
-  <script src="resources/script.js"></script>
-</body>
-
-</html>
-
-
-  </main>
-
-  <footer class="website-text">
     <p>&copy; RentMyCaravan 2024 - All rights reserved</p>
   </footer>
 
-  <script src="resources/default/script.js">
-  </script>
+  <script src="resources/default/script.js"></script>
 </body>
 
 </html>
