--- a/html/CaravanList.html
+++ b/html/CaravanList.html
@@ -52,15 +52,49 @@
   </header>
 
   <main>
-    <div class="items-container">
-      <div class="box">
-        <img src="resources/jess/caravan1.jpeg" alt="Caravan Image" class="box-image">
-        <div class="box-content">
-          <h2 class="price">£32,995</h2>
-          <p class="make-model">2021 Buccaneer Bermuda</p>
-          <p class="additional-details">Year | Body Type | Fuel Type | Mileage | Door Num</p>
+    <!-- Vertical carousel section -->
+    <div class="container">
+      <div class="vertical-carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item">
+            <!-- Box 1 -->
+            <div class="box">
+
+              <img src="resources/jess/caravans 1.jpeg" alt="Image 1" class="box-image">
+              <div class="box-content">
+                <h2>£32,995</h2>
+                <p>2021 Buccaneer Bermuda / 4</p>
+                <p>Make: Buccaneer | Model: Bermuda | Internal Length: 6,390mm | Unladen Weight: 1,831kg | Berth: 4 |
+                  MTPLM:
+                  1,990kg.</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <!-- Box 2 -->
+            <div class="box">
+
+              <img src="resources/jess/caravan 2.jpeg" alt="Image 2" class="box-image">
+              <div class="box-content">
+                <h2>£17,500</h2>
+                <p>2015 Lunar Delta TI</p>
+                <p>Make: Lunar | Model: Delta | Internal Length: 6,340mm | Unladen Weight: 1,525kg | Berth: 4 | MTPLM:
+                  1,685kg.</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <!-- Box 3 -->
+            <div class="box">
+
+              <img src="resources/jess/caravan 2.jpeg" alt="Image 3" class="box-image">
+              <div class="box-content">
+                <h2>Box 3</h2>
+                <p>This is the content of box 3.</p>
+              </div>
+            </div>
+          </div>
         </div>
-        <img src="resources/tim/defaultProfile.png" alt="Profile Picture" class="profile-picture2">
       </div>
     </div>
   </main>
