better test data

--- a/html/index.html
+++ b/html/index.html
@@ -109,17 +109,18 @@
             });
           }
           /*
-            INSERT INTO vehicle_details (user_id, vehicle_make, vehicle_model, vehicle_bodytype, fuel_type, mileage, location, year, num_doors, image_url)
-VALUES (1, 'Ford', 'Fiesta', 'SUV', 'Diesel', '56051', 'Vancouver', '1999', 5, 'resources/caitlin/caravan.jpeg');
+INSERT INTO vehicle_details (user_id, vehicle_make, vehicle_model, vehicle_bodytype, fuel_type, mileage, location, year, num_doors, image_url)
+VALUES (1, 'Dodge', 'Grand Caravan', 'Caravan', 'Petrol', '85000', 'Montreal', '2015', 4, 'https://i.imgur.com/8u46hmn.png);
 
 INSERT INTO vehicle_details (user_id, vehicle_make, vehicle_model, vehicle_bodytype, fuel_type, mileage, location, year, num_doors, image_url)
-VALUES (1, 'Honda', 'Civic', 'Coupe', 'Electric', '120000', 'Toronto', '2010', 2, 'resources/caitlin/caravan.jpeg');
+VALUES (1, 'Volkswagen', 'California', 'Caravan', 'Diesel', '65000', 'Calgary', '2018', 4, 'https://i.imgur.com/E21FmZr.png');
 
 INSERT INTO vehicle_details (user_id, vehicle_make, vehicle_model, vehicle_bodytype, fuel_type, mileage, location, year, num_doors, image_url)
-VALUES (1, 'Chevrolet', 'Impala', 'Convertible', 'Petrol', '85000', 'Montreal', '2015', 2, 'resources/caitlin/caravan.jpeg');
+VALUES (1, 'Ford', 'Transit Custom', 'Caravan', 'Diesel', '70000', 'Toronto', '2016', 4, 'https://i.imgur.com/5FT7BHd.png');
 
 INSERT INTO vehicle_details (user_id, vehicle_make, vehicle_model, vehicle_bodytype, fuel_type, mileage, location, year, num_doors, image_url)
-VALUES (1, 'Toyota', 'Corolla', 'Hatchback', 'Hybrid', '65000', 'Calgary', '2018', 4, 'resources/caitlin/caravan.jpeg');
+VALUES (1, 'Mercedes-Benz', 'V-Class Marco Polo', 'Caravan', 'Diesel', '80000', 'Vancouver', '2017', 4, 'https://i.imgur.com/UzNvUm4.png');
+
 
             */
         })
