--- a/html/EditCaravan.html
+++ b/html/EditCaravan.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Add Caravan - RentMyCaravan</title>
+  <title>Edit Caravan - RentMyCaravan</title>
   <link rel="stylesheet" href="resources/default/styles.css" id="defaultStyle">
   <link rel="stylesheet" href="resources/darkStyles.css" id="darkStyle" disabled>
   <style>
