--- a/html/index.html
+++ b/html/index.html
@@ -110,7 +110,7 @@
           }
           /*
 INSERT INTO vehicle_details (user_id, vehicle_make, vehicle_model, vehicle_bodytype, fuel_type, mileage, location, year, num_doors, image_url)
-VALUES (1, 'Dodge', 'Grand Caravan', 'Caravan', 'Petrol', '85000', 'Montreal', '2015', 4, 'https://i.imgur.com/8u46hmn.png);
+VALUES (1, 'Dodge', 'Grand Caravan', 'Caravan', 'Petrol', '85000', 'Montreal', '2015', 4, 'https://i.imgur.com/8u46hmn.png');
 
 INSERT INTO vehicle_details (user_id, vehicle_make, vehicle_model, vehicle_bodytype, fuel_type, mileage, location, year, num_doors, image_url)
 VALUES (1, 'Volkswagen', 'California', 'Caravan', 'Diesel', '65000', 'Calgary', '2018', 4, 'https://i.imgur.com/E21FmZr.png');
